--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'war'
 }
 
 group 'com.pang'
@@ -10,9 +11,14 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework:spring-context:5.3.8'
+    // https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api
+    compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
 
-    testImplementation 'org.springframework:spring-context:5.3.8'
+
+    //implementation 'org.springframework:spring-context:5.3.8'
+    implementation 'org.springframework:spring-webmvc:5.3.8'//위 의존성을 모두 포함하고 있기 때문에 제거한다.
+
+    testImplementation 'org.springframework:spring-test:5.3.8'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
